--- a/Plot3dReader/Properties/launchSettings.json
+++ b/Plot3dReader/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Plot3dReader": {
-      "commandName": "Project",
-      "commandLineArgs": "2 4"
+      "commandName": "Project"
     }
   }
 }
